crates/aspen-hooks-ticket/tests/ui/std_wrappers_require_feature.rs
use aspen_hooks_ticket::AspenHookTicket;

fn main() {
    let ticket = AspenHookTicket::new("cluster", vec![]);
    let _ = ticket.with_expiry_hours(1);
}
